--- a/domain.yml
+++ b/domain.yml
@@ -8,6 +8,8 @@ intents:
   - provide_short_qa
   - affirm_another_shortqa_question
   - mention_long_question
+  - nlu_fallback
+  - affirm
   - greet
   - goodbye
   - bot_challenge
@@ -23,10 +25,26 @@ slots:
     influence_conversation: true
     mappings:
       - type: from_text
+  question_type:
+    type: text
+    influence_conversation: true
+    mappings:
+      - type: from_intent
+        value: "mcq"
+        intent: ask_mcq
+      - type: from_intent
+        value: "mcq"
+        intent: provide_mcq
+      - type: from_intent
+        value: "short_qa"
+        intent: ask_short_qa
+      - type: from_intent
+        value: "short_qa"
+        intent: provide_short_qa
 
 responses:
   utter_ask_mcq_question:
-    - text: "Absolutely.! - what's your question?"
+    - text: "Absolutely! What's your question?"
     - text: "Sure! What question do you have in mind?"
     - text: "Of course! Please provide me with the question."
     - text: "Sure! What question do you have in mind?"
@@ -41,19 +59,24 @@ responses:
     - text: "Do you have another MCQ question?"
     - text: "Have another MCQ question? Great, hit me!"
     - text: "Am ready for another MCQ question if you are!"
-    - text: "Would you like to ask another MCQ question? Am here."
+    - text: "Would you like to ask another MCQ question? I'm here."
   utter_ask_another_shortqa_question:
     - text: "Do you have another short-answer question, or is there anything else I can help with?"
     - text: "Do you have another short-answer question?"
     - text: "Have another short-answer question? Great, hit me!"
     - text: "Am ready for another short-answer question if you are!"
-    - text: "Would you like to ask another short-answer question? Am here."
+    - text: "Would you like to ask another short-answer question? I'm here."
   utter_only_mcq_short_answer:
     - text: "I’m sorry, I only handle multiple-choice questions (MCQs) and short-answer questions. Would you like one of those instead?"
     - text: "I’m sorry, I only handle multiple-choice questions (MCQs) and short-answer questions. Please pick either."
     - text: "Apologies, I only handles MCQ and Short Answer Questions. Would you like to ask one of those instead?"
+  utter_default:
+    - text: "I’m not sure I understood. Could you please rephrase that, or would you like to ask an MCQ or short-answer question?"
   utter_greet:
   - text: "Hey! How are you?"
+  - text: "Hello! How can I assist you today?"
+  - text: "Jambo, how can i be of assistance to you?"
+  - text: "Hello earthling, how can be of service?"
 
   utter_goodbye:
   - text: "Bye! (Type '/stop' to exit)"
@@ -63,8 +86,8 @@ responses:
   - text: "Muraho! (Type '/stop' to exit)"
 
   utter_iamabot:
-  - text: "I am a bot, built by delphine nyabke, and powered by Rasa."
-  - text: "I am a bot, built by delphine nyabke, and powered by Rasa. I am here to assist you with your questions."
+  - text: "I am a bot, built by delphine nyaboke, and powered by Rasa."
+  - text: "I am a bot, built by delphine nyaboke, and powered by Rasa. I am here to assist you with your questions."
   - text: "Of course not, I am a bot! I was built by delphine nyaboke, to assist with question answering."
   - text: "Yes, I am a bot, built by delphine nyaboke, and powered by Rasa. I am here to assist you with your questions."
   - text: "I am a bot, built by delphine nyaboke, and powered by Rasa. I am here to assist you with your questions."
@@ -73,6 +96,7 @@ actions:
   - action_run_mcq
   - action_run_short_qa
   - action_end_conversation
+  - action_handle_ambigious_affirm
 
 session_config:
   session_expiration_time: 60
